fix spacing issues

--- a/packages/global/scss/components/_magazine.scss
+++ b/packages/global/scss/components/_magazine.scss
@@ -8,6 +8,14 @@
   }
 }
 
+.magazine-publication-card-block {
+  &__body {
+    .issue-archive-cover {
+      margin-bottom: $block-spacer;
+    }
+  }
+}
+
 .node-list {
   $self: &;
   &--latest-issue {
